feat: 初始化前端项目结构，集成 Next.js 和 Ant Design
- 新增 ESLint 和 PostCSS 配置文件，确保代码质量和样式处理
- 创建基本的 Next.js 配置文件，设置项目基础结构
- 新增 README.md 文件，提供项目介绍和使用说明
- 实现全局样式和布局组件，支持响应式设计
- 新增数据上传和管理面板组件，支持 Excel 文件处理
- 集成 Redis 数据库，提供数据存储和读取功能
- 更新 package.json 和 package-lock.json，添加必要依赖

--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "name": "free-time-lookup",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cd frontend && npm run dev"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@vercel/node": "^5.1.16",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "ioredis": "^5.6.1",
-    "vercel": "^41.7.8"
+    "@ant-design/icons": "^6.0.0",
+    "antd": "^5.25.1",
+    "next": "15.3.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "redis": "^5.0.1",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.35",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
