--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "antd": "^5.25.1",
     "next": "15.3.2",
+    "otplib": "^12.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^5.0.1",
