--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/charts": "^2.3.0",
     "@ant-design/icons": "^6.0.0",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "antd": "^5.25.1",
+    "dayjs": "^1.11.13",
     "next": "15.3.2",
     "otplib": "^12.0.1",
     "react": "^19.0.0",
