--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
+    "@stagewise/toolbar-next": "^0.1.2",
     "antd": "^5.25.1",
     "dayjs": "^1.11.13",
     "next": "15.3.2",
