--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dayjs": "^1.11.13",
     "next": "15.3.2",
     "otplib": "^12.0.1",
+    "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^5.0.1",
